--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
     <head>
         <link rel="icon" type="image/jpg" href="awan.jpg">
+        <title>Perancangan web</title>
     </head>
 </html>
