--- a/index.html
+++ b/index.html
@@ -3,5 +3,23 @@
     <head>
         <link rel="icon" type="image/jpg" href="awan.jpg">
         <title>Perancangan web</title>
+        <style>
+            body {
+                font-family: Arial, Helvetica, sans-serif;
+                line-height: 1.6;
+                max-width: 1000px;
+                margin: 0 auto;
+                padding: 20px;
+                color: black;
+            }
+            h1 {
+                color: black;
+                border-bottom: 2px solid #eee;
+                padding-bottom: 0.2em;
+            }
+        </style>
     </head>
+    <body>
+        <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
+    </body>
 </html>
