--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
                 max-width: 1000px;
                 margin: 0 auto;
                 padding: 20px;
-                color: black;
+                color: rgb(163, 32, 32);
             }
             h1 {
-                color: black;
+                color: rgb(156, 33, 33);
                 border-bottom: 2px solid #eee;
-                padding-bottom: 0.2em;
+                padding-bottom: 2em;
+                font-size: 25px;
             }
         </style>
     </head>
     <body>
         <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
+        <img class="dennis" src="dennis.webp">
     </body>
 </html>
