perubahan di step 4

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </head>
     <body>
         <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
-        <img class="dennis" src="dennis.webp">
+        <img class="dennis" src="dennis.webp" style="margin: auto; display: block;">
     </body>
 </html>
