--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     </head>
     <body>
         <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
-        <img class="dennis" src="dennis.webp" style="margin: auto; display: block;">
+        <img class="dennis" src="dennis.webp" style="margin: auto; display: block;border-radius: 50%; border: 10px solid;">
+        <h2 style="color: black;padding-bottom: 0.3;text-align: center;">HYLMI AUNU RIDZALDY</h2>
+        <ul>
+            <li>Kampus : <a href="https://global.ac.id">Global Institute</a></li>
+        </ul>
     </body>
 </html>
