--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <body>
         <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
         <img class="dennis" src="dennis.webp" style="margin: auto; display: block;border-radius: 50%; border: 10px solid;">
+        <h2 style="color: black;padding-bottom: 0.3;text-align: center;">HYLMI AUNU RIDZALDY</h2>
+        <ul>
+            <li>Kampus : <a href="https://global.ac.id">Global Institute</a></li>
+            <li>Nim : 1124160204</li>
+            <li>Nama : Hylmi aunu ridzaldy</li>
+            <li>jurusan : Computerized design and multimedia</li>
+            <li>semester : 2</li>
+            <li>matakuliah : perancangan web</li>
         </ul>
     </body>
 </html>
