--- a/index.html
+++ b/index.html
@@ -18,19 +18,62 @@
                 padding-bottom: 2em;
                 font-size: 25px;
             }
+            table{
+                border-collapse: collapse;
+                width: 100%;
+                border: 1px solid black;
+                border-radius: 6px;
+                overflow: hidden;
+            }
+            th, td{
+                padding: 15px;
+                border: solid rgb(240, 9, 9);
+                text-align: center;
+            }
+            th {
+                background-color: rgb(14, 190, 235);
+                color: rgb(241, 7, 7);
+                font-weight: bold;
+                font-size: 15px;
+                text-align: center;
+            }
         </style>
     </head>
     <body>
         <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
         <img class="dennis" src="dennis.webp" style="margin: auto; display: block;border-radius: 50%; border: 10px solid;">
         <h2 style="color: black;padding-bottom: 0.3;text-align: center;">HYLMI AUNU RIDZALDY</h2>
+        <section style="background-color: aqua; color: black; text-align: center;">Biodata</section>
         <ul>
-            <li>Kampus : <a href="https://global.ac.id">Global Institute</a></li>
-            <li>Nim : 1124160204</li>
-            <li>Nama : Hylmi aunu ridzaldy</li>
-            <li>jurusan : Computerized design and multimedia</li>
-            <li>semester : 2</li>
-            <li>matakuliah : perancangan web</li>
+            <li style="color: black;">Kampus : <a href="global.ac.id">Global Institute</a></li>
+            <li style="color: black;">Nim : 1124160204</li>
+            <li style="color: black;">Nama : Hylmi aunu ridzaldy</li>
+            <li style="color: black;">jurusan : Computerized design and multimedia</li>
+            <li style="color: black;">semester : 2</li>
+            <li style="color: black;">matakuliah : perancangan web</li>
         </ul>
+        <section style="background-color: aqua; color: black; text-align: center;">Biodata</section>
+        <table>
+            <tr>
+                <th>No</th>
+                <th>Tugas</th>
+                <th>Link Code</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>tugas bikin portfolio</td>
+                <td><a href="https://github.com/HylmiRidzaldy/111124160204-tugas-portfolio">https://github.com/HylmiRidzaldy/111124160204-tugas-portfolio</a></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>tugas tabel</td>
+                <td><a href="https://github.com/HylmiRidzaldy/1124160204-html-Pertemuan-ke6">https://github.com/HylmiRidzaldy/1124160204-html-Pertemuan-ke6</a></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>tugas rowspan dan cellspan</td>
+                <td><a href="https://github.com/HylmiRidzaldy/1124160204-html-day7">https://github.com/HylmiRidzaldy/1124160204-html-day7</a></td>
+            </tr>
+        </table>
     </body>
 </html>
