--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         </style>
     </head>
     <body>
-        <h1>WEB PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</h1>
+        <header style="background-color: aqua; border: 5PX solid;align-content: center; text-align: center;">PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</header>
+        <P></P>
         <img class="dennis" src="dennis.webp" style="margin: auto; display: block;border-radius: 50%; border: 10px solid;">
-        <h2 style="color: black;padding-bottom: 0.3;text-align: center;">HYLMI AUNU RIDZALDY</h2>
-        <section style="background-color: aqua; color: black; text-align: center;">Biodata</section>
+        <header style="background-color: aqua; color: black; text-align: center; border: 3px solid;">HYLMI AUNU RIDZALDY</header>
+        <P></P>
+        <section style="background-color: aqua; color: black; text-align:center; border: 3px solid;">Biodata</section>
         <ul>
             <li style="color: black;">Kampus : <a href="global.ac.id">Global Institute</a></li>
             <li style="color: black;">Nim : 1124160204</li>
@@ -52,7 +54,7 @@
             <li style="color: black;">semester : 2</li>
             <li style="color: black;">matakuliah : perancangan web</li>
         </ul>
-        <section style="background-color: aqua; color: black; text-align: center;">Biodata</section>
+        <section style="background-color: aqua; color: black; text-align: center; border: 3px solid;">Tabel</section>
         <table>
             <tr>
                 <th>No</th>
@@ -74,6 +76,12 @@
                 <td>tugas rowspan dan cellspan</td>
                 <td><a href="https://github.com/HylmiRidzaldy/1124160204-html-day7">https://github.com/HylmiRidzaldy/1124160204-html-day7</a></td>
             </tr>
-        </table>
+        </table><br>
+        <img src="indonesian-map.jpg" usemap="#peta-klik" alt="peta interaktif">
+        <map name="peta-klik">
+            <area shape="rect" coords="53,249,114,301" href="aceh.html" alt="aceh">
+            <area shape="rect" coords="551,600,574,617" href="BALI.HTML" alt="BALI">
+
+        </map>
     </body>
 </html>
