--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             }
         </style>
     </head>
-    <body>
+    <body id="apakek">
         <header style="background-color: aqua; border: 5PX solid;align-content: center; text-align: center;">PROFILE HYLMI AUNU RIDZALDY (MAHASISWA GLOBAL INSTITUTE)</header>
         <P></P>
         <img class="dennis" src="dennis.webp" style="margin: auto; display: block;border-radius: 50%; border: 10px solid;">
@@ -81,7 +81,9 @@
         <map name="peta-klik">
             <area shape="rect" coords="53,249,114,301" href="aceh.html" alt="aceh">
             <area shape="rect" coords="551,600,574,617" href="BALI.HTML" alt="BALI">
-
+            <br>
         </map>
+            <a href="#apakek">bagian atas</a>
+        
     </body>
 </html>
