--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             <br>
         </map>
             <a href="#apakek">bagian atas</a>
+            
+            <a href="https://github.com/HylmiRidzaldy"><img src="github.png" alt="github" width="50px"></a>
+            <a href="https://wa.me/6285811165081"><img src="wa.jpg" alt="wa" width="50px"></a>
+            <a href="mailto:someone@example.com"><img src="email.png" alt="email" width="50px"></a>
         
     </body>
 </html>
